trying to fix top white space

--- a/style.css
+++ b/style.css
@@ -1,19 +1,14 @@
-body {
-
-    display: block;
-    height: 200px;
-    width: 160px;
+body, html {
+  height: 100%;
+  margin: 0;
 }
 
-div.red{
-    background-color: red;
-    height: 20px;
-    width: 20px;
-    float: left;
+header {
+  background-image: url("vhoa0.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100%;
 }
-div.black{
-    background-color: black;
-    height: 20px;
-    width: 20px;
-    float: left;
-}
+
+/*# sourceMappingURL=style.css.map */
